# phdhelper2

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/phdhelper/: __init__.py  colours.py  constants.py  mpl.py
tests/: test_mpl.py
