[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py311"]
line-length = 88
fast = true

[tool.isort]
profile = "black"
line-length = 88

[tool.flake8]
max-line-length = 88
select = "F,E,W,B,B901,B902,B903"
exclude = [
    ".eggs",
    ".git",
    ".tox",
    "nssm",
    "obj",
    "out",
    "packages",
    "pywin32",
    "tests",
    "swagger_client",
]
ignore = ["E722", "B001", "W503", "E203"]

[tool.pytest.ini_options]
addopts = "--cov-report html --cov src --cov-fail-under 0 --cov-append"
pythonpath = ["src"]
testpaths = "tests"
