[metadata]
name = phdhelper
version = 0.1.0
author = James Plank
author_email = j.plank@soton.ac.uk
description = Personal helper functions
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
zip_safe = False
install_requires =
    numpy
    matplotlib
    colorcet

[options.packages.find]
where = src
exclude =
    tests*
    docs*
